syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.j4u.proto";
option java_outer_classname = "UsersProto";

service UserService {
    rpc createUser(CreateUserRequestMessage) returns (CreateUserResponseMessage);
}

message CreateUserRequestMessage {
    string name = 1;
}

message CreateUserResponseMessage {
    int32 id = 1;
    string name = 2;
}